CREATE TABLE Compte(
    id SERIAL PRIMARY KEY,
    nom varchar(30) UNIQUE NOT NULL
);