CREATE TABLE GenresMusicaux(
    nom VARCHAR(30) PRIMARY KEY
);