CREATE TABLE Pays(
    nom VARCHAR(30) PRIMARY KEY
);